force-app/main/default/objects/Additional_Appication_Fee_on_Loan_Size__mdt/Additional_Appication_Fee_on_Loan_Size__mdt.object-meta.xml
<CustomObject>
    <label>Additional Appication Fee on Loan Size</label>
    <pluralLabel>Additional Appication Fees on Loan Size</pluralLabel>
</CustomObject>