force-app/main/default/objects/Additional_Appication_Fee_on_Loan_Size__mdt/fields/Additional_Fee_for_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fee_for_Application_Fee__c</fullName>
    <label>Additional Fee for Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>