force-app/main/default/objects/Additional_Appication_Fee_on_Loan_Size__mdt/fields/Loan_Size_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Loan_Size_Upper_Limit__c</fullName>
    <label>Loan Size Upper Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>