force-app/main/default/objects/Additional_Appication_Fee_on_Loan_Size__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Loan_Size_Lower_Limit__c</columns>
    <columns>Loan_Size_Upper_Limit__c</columns>
    <columns>Additional_Fee_for_Application_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>